--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 
 }
 .apply_box {
-    max-width: 600px;
+    max-width: 500px;
     padding: 20px;
     background-color: white;
     margin: 0 auto;
@@ -24,3 +24,62 @@ body {
 .title_small{
     font-size: 22px;
 }
+
+.formcontainer {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+}
+
+.form_control{
+    display: flex;
+    flex-direction: column;
+}
+
+label{
+    margin-bottom: 5px;
+    font-size: 15px;
+}
+
+input, select, textarea{
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 15px;
+}
+input, select, textarea:focus{
+    outline-color: red;
+}
+.button_container{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 15px;
+}
+button{
+    background-color: red;
+    border: transparent solid 3px;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 7px;
+    transition: 0.3s ease-in;
+}
+button:hover{
+    background-color: #ccc;
+    border: 2px solid red;
+    color: black;
+    transition: 0.3s ease-out;
+    cursor: pointer;
+}
+.textarea_control{
+    grid-column: 1 / span 2;
+}
+.textarea_control textarea{
+    width: 100%;
+}
+
+@media (max-width:460px){
+    .textarea_control{
+        grid-column: 1 / span 1;
+    }
+};
